--- a/style.css
+++ b/style.css
@@ -159,7 +159,13 @@ nav ul li {
         
     
     }
-	
+	#trim{
+        width:150px;
+        background-repeat: no-repeat;
+        float: left;
+        margin-top: 140px;
+        margin-left: 20px;
+    }
 	
   #click:checked ~ .menu-btn i::before{
       content: "\f00d";
