--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ nav ul li {
         display:block;
     }
 	#main{
-        background-image: url(point.jpg );
+        background-image: url(pointer.jpg );
         background-size: cover;
         background-repeat: no-repeat;
         height: 100vh;
